@@ -1,4 +1,7 @@
 2009-08-29
+- cleanup and add desktop_right/desktop_left action on task (by jackp)
+
+2009-08-29
 - adjust saturation/brightness on task icon
 
 2009-08-29
